--- a/a2.html
+++ b/a2.html
@@ -2,9 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Ant Game</title>
+    <link rel="stylesheet" href="main.css" />
 </head>
 <body>
-<div>
+<div class="page1">
     <div>
         Level:
         <form id="level" action="">
@@ -12,8 +13,12 @@
             <input type="radio" name="level" value="2">2
         </form>
     </div>
-    <button type="button">Start</button>
-    <div>High Score: <div id="score"></div></div>
+    <button onclick="main()">Start</button>
+    <div>High Score:
+        <div id="score"></div>
+    </div>
 </div>
+
+<script language="javascript" src="ant.js"></script>
 </body>
 </html>
