Created images for bug types

--- a/a2.html
+++ b/a2.html
@@ -9,7 +9,7 @@
     	<p id="gametitle">Ant Scape</p>
   		<div id="radio-btn">
 	        <label>Level:</label>
-     		<input id="radio-one" type="radio"  name="level" value="one"> 1
+     		<input id="radio-one" type="radio"  name="level" value="one" checked="checked"> 1
     	 	<input id="radio-two" type="radio"  name="level" value="two"> 2
   		</div>
         	<button id="startbutton" type="button">START</button> 
