fade half works

--- a/a2.html
+++ b/a2.html
@@ -10,7 +10,7 @@
 		
 	</script>
 </head>
-<body onload="startpage();">
+<body onload="load();">
     <div id="titlepage" >
     	<p id="gametitle">Ant Scape</p>
   		<div id="radio-btn">
